--- a/2d-inc-cylinder/no-PI_no-PMG.ini
+++ b/2d-inc-cylinder/no-PI_no-PMG.ini
@@ -28,6 +28,8 @@ pseudo-resid-norm = l2
 pseudo-resid-tol  = 5e-3
 pseudo-resid-tol-p= 1e-2
 
+dt-switch = 5
+
 [solver-interfaces]
 riemann-solver = rusanov
 ldg-beta = 0.5
@@ -44,7 +46,7 @@ soln-pts = gauss-legendre
 
 [soln-plugin-pseudostats]
 flushsteps = 20
-file = residual.csv
+file = residual_variable-dt.csv
 header = true
 
 [soln-bcs-wall]
