--- a/2d-inc-cylinder/yes-PI_no-PMG.ini
+++ b/2d-inc-cylinder/yes-PI_no-PMG.ini
@@ -30,8 +30,9 @@ pseudo-resid-tol-p= 1e-2
 
 atol = 1e-6
 pseudo-dt-max-mult = 2
+pseudo-dt-min-mult = 0.1
 
-dt-switch = 5
+dt-switch = 2
 
 [solver-interfaces]
 riemann-solver = rusanov
