--- a/2d-inc-cylinder/PMG-2lvl.ini
+++ b/2d-inc-cylinder/PMG-2lvl.ini
@@ -15,28 +15,27 @@ order  = 3
 [solver-time-integrator]
 formulation       = dual
 scheme            = backward-euler ; sdirk33
-pseudo-scheme     = rk34
+pseudo-scheme     = rk34 ; 45
 controller        = none
 pseudo-controller = local-pi
 tstart            = 75.0
-tend              = 76.0
-dt                = 0.1
-pseudo-dt         = 0.01
+tend              = 75.04
+dt                =  0.025
+pseudo-dt         =  0.002
 pseudo-niters-min = 1
-pseudo-niters-max = 50
+pseudo-niters-max = 10 ; 5
 pseudo-resid-norm = l2
 pseudo-resid-tol  = 5e-3
 pseudo-resid-tol-p= 1e-2
 
 atol = 1e-6
-pseudo-dt-max-mult = 1
-pseudo-dt-min-mult = 1
-
-dt-switch = 4
+pseudo-dt-max-mult = 1.0000001
+pseudo-dt-min-mult = 0.9999999
 
 [solver-dual-time-integrator-multip]
 pseudo-dt-fact = 1.75
-cycle = [(3, 1), (2, 1), (1, 1), (0, 2), (1, 1), (2, 1), (3, 4)]
+; cycle = [(3, 4), (2, 4), (3, 4)]
+cycle = [(3, 1), (2, 1), (1, 1), (0, 1),(1, 1), (2, 1), (3, 1)]
 
 [solver-interfaces]
 riemann-solver = rusanov
@@ -51,11 +50,6 @@ soln-pts = williams-shunn
 
 [solver-elements-quad]
 soln-pts = gauss-legendre
-
-[soln-plugin-pseudostats]
-flushsteps = 20
-file = res_vdt.csv
-header = true
 
 [soln-bcs-wall]
 type = no-slp-wall
@@ -81,5 +75,10 @@ p = Pc
 
 [soln-plugin-pseudodt]
 flushsteps = 1
-file = dtau_vdt.csv
+file = dtau_residuals.csv
+header = true
+
+[soln-plugin-residualstats]
+flushsteps = 1
+file = res_residuals.csv
 header = true
