Create a TGV case for testing benchmarking

--- a/tgv/file.ini
+++ b/tgv/file.ini
@@ -13,8 +13,7 @@ collect-wait-times = true
 gamma = 1.4
 mu = 7.395099728874521e-05
 Pr = 0.71
-
-M=0.1
+M = 0.1
 
 [solver]
 system = navier-stokes
@@ -50,6 +49,10 @@ dt-out = 1
 basedir = .
 basename = ./benchmark-double_{t:.0f}.pyfrs
 
+[soln-plugin-benchmark]
+flushsteps = 1
+file = benchmark.csv
+header = true
 
 [soln-ics]
 u    = +0.118321595661992*sin(x)*cos(y)*cos(z)
