clean config file, add python plotting scripts

--- a/tgv/file.ini
+++ b/tgv/file.ini
@@ -18,9 +18,6 @@ M = 0.1
 [solver]
 system = navier-stokes
 order = 3
-anti-alias = none
-viscosity-correction = none
-shock-capturing = none
 
 [solver-time-integrator]
 scheme = rk4
@@ -44,15 +41,11 @@ soln-pts = gauss-legendre
 quad-deg = 6
 quad-pts = gauss-legendre
 
-[soln-plugin-writer]
-dt-out = 1
-basedir = .
-basename = ./benchmark-double_{t:.0f}.pyfrs
-
 [soln-plugin-benchmark]
 flushsteps = 1
 file = benchmark.csv
 header = true
+mesh = /home/sambit/github/Improvements/PyFR-Test-Cases/tgv/mesh.pyfrm
 
 [soln-ics]
 u    = +0.118321595661992*sin(x)*cos(y)*cos(z)
