rename config file

--- a/tgv/test-variabledt.ini
+++ b/tgv/test-variabledt.ini
@@ -48,13 +48,13 @@ int-E = rho*(u*u + v*v + w*w)
 int-enst = rho*(%(vor1)s*%(vor1)s + %(vor2)s*%(vor2)s + %(vor3)s*%(vor3)s)
 
 [soln-plugin-writer]
-dt-out = 1
+dt-out = 0.1
 basedir = .
-basename = taylor-green-{t:.2f}
+basename = taylor-green
 
 [soln-plugin-dtstats]
-flushsteps = 1000
-file = dtstats.csv
+flushsteps = 1
+file = base_dtstats.csv
 header = true
 
 [soln-ics]
