--- a/2d-inc-cylinder/init.ini
+++ b/2d-inc-cylinder/init.ini
@@ -56,9 +56,9 @@ file = residual.csv
 header = true
 
 [soln-plugin-writer]
-dt-out = 5.0
+dt-out = 25.0
 basedir = .
-basename = inc-cylinder-{t:.2f}
+basename = soln-{t:.0f}
 
 [soln-bcs-wall]
 type = no-slp-wall
