--- a/2d-inc-cylinder/no-PI_no-PMG.ini
+++ b/2d-inc-cylinder/no-PI_no-PMG.ini
@@ -14,21 +14,19 @@ order  = 3
 
 [solver-time-integrator]
 formulation       = dual
-scheme            = sdirk33
+scheme            = esdirk23
 pseudo-scheme     = rk4
-controller        = none
+controller        = pi
 pseudo-controller = none
-tstart            = 75.0
-tend              = 76.0
-dt                = 0.01
-pseudo-dt         = 0.001
+tstart            = 0.0
+tend              = 100
+dt                = 0.005
+pseudo-dt         = 0.0001
 pseudo-niters-min = 1
 pseudo-niters-max = 100
 pseudo-resid-norm = l2
 pseudo-resid-tol  = 5e-3
 pseudo-resid-tol-p= 1e-2
-
-dt-switch = 5
 
 [solver-interfaces]
 riemann-solver = rusanov
@@ -46,7 +44,7 @@ soln-pts = gauss-legendre
 
 [soln-plugin-pseudostats]
 flushsteps = 20
-file = residual_variable-dt.csv
+file = residual_variable-dt1.csv
 header = true
 
 [soln-bcs-wall]
@@ -70,3 +68,7 @@ v = Vin
 u = Uin
 v = Vin
 p = Pc
+
+[soln-plugin-dtstats]
+file = dtstats-dt1.csv
+header = true
