Test implicit dt, add plugins

--- a/2d-euler-vortex/compressible-explicit.ini
+++ b/2d-euler-vortex/compressible-explicit.ini
@@ -3,8 +3,6 @@ precision = double
 
 [constants]
 gamma = 1.4
-
-; Euler vortex params
 S = 13.5    ; Strength
 M = 0.4     ; Mach number
 R = 1.5     ; Radius
@@ -14,11 +12,13 @@ system = euler
 order = 3
 
 [solver-time-integrator]
-scheme = rk4
-controller = none
+scheme = rk34
+controller = pi
 tstart = 0.0
-tend = 100.0
-dt = 0.005
+tend = 0.001
+dt = 0.001
+atol = 1e-6
+rtol = 1e-6
 
 [solver-interfaces]
 riemann-solver = rusanov
@@ -30,17 +30,28 @@ flux-pts = gauss-legendre
 soln-pts = gauss-legendre
 
 [soln-plugin-nancheck]
-nsteps = 50
+nsteps = 1
+
+[soln-plugin-residual]
+nsteps = 1
+file = compressible-explicit-res.csv
+header = true
+
+[soln-plugin-integrate]
+nsteps = 1 
+file = compressible-explicit-int.csv
+header = true
+quad-deg = 9
+
+int-E = rho*(u*u + v*v)
 
 [soln-plugin-writer]
-dt-out = 10.0
+dt-out = 1.0
 basedir = .
-basename = euler-vortex-{t:.1f}
+basename = euler-vortex
 
 [soln-ics]
-; Factored common subexpression
 f = ((1 - x*x - y*y)/(2*R*R))
-
 rho = pow(1 - S*S*M*M*(gamma - 1)*exp(2*%(f)s)/(8*pi*pi), 1/(gamma - 1))
 u = S*y*exp(%(f)s)/(2*pi*R)
 v = 1 - S*x*exp(%(f)s)/(2*pi*R)
