--- a/2d-euler-vortex/compressible-implicit_half-dt.ini
+++ b/2d-euler-vortex/compressible-implicit_half-dt.ini
@@ -17,12 +17,12 @@ formulation = dual
 scheme = sdirk33
 controller = none
 tstart = 0.0
-tend = 0.1
-dt = 0.1
+tend = 0.02
+dt = 0.005
 
 pseudo-scheme = rk4
 pseudo-controller = none
-pseudo-dt = 0.05
+pseudo-dt = 0.0025
 pseudo-niters-min = 1
 pseudo-niters-max = 5
 pseudo-resid-tol = 1e-7
@@ -41,12 +41,12 @@ nsteps = 1
 
 [soln-plugin-residual]
 nsteps = 1
-file = compressible-implicit-res.csv
+file = compressible-implicit_half-dt-res.csv
 header = true
 
 [soln-plugin-integrate]
 nsteps = 1 
-file = compressible-implicit-int.csv
+file = compressible-implicit_half-dt-int.csv
 header = true
 quad-deg = 9
 
@@ -54,7 +54,7 @@ int-E = rho*(u*u + v*v)
 
 [soln-plugin-pseudostats]
 flushsteps = 1
-file = pseudostats.csv
+file = pseudostats_half-dt.csv
 header = true
 
 [soln-plugin-writer]
