Remove png files and python file from gitignore

--- a/2d-euler-vortex/compressible-implicit-esdirk23.ini
+++ b/2d-euler-vortex/compressible-implicit-esdirk23.ini
@@ -14,15 +14,15 @@ order = 3
 [solver-time-integrator]
 formulation = dual
 
-scheme = sdirk33
+scheme = esdirk23
 controller = none
 tstart = 0.0
-tend = 0.1
-dt = 0.1
+tend = 0.01
+dt = 0.0005
 
 pseudo-scheme = rk4
 pseudo-controller = none
-pseudo-dt = 0.05
+pseudo-dt = 0.00025
 pseudo-niters-min = 1
 pseudo-niters-max = 5
 pseudo-resid-tol = 1e-7
@@ -41,12 +41,12 @@ nsteps = 1
 
 [soln-plugin-residual]
 nsteps = 1
-file = compressible-implicit-res.csv
+file = esdirk23-res.csv
 header = true
 
 [soln-plugin-integrate]
 nsteps = 1 
-file = compressible-implicit-int.csv
+file = esdirk23-int.csv
 header = true
 quad-deg = 9
 
@@ -54,7 +54,7 @@ int-E = rho*(u*u + v*v)
 
 [soln-plugin-pseudostats]
 flushsteps = 1
-file = pseudostats.csv
+file = esdirk23-pseudostats.csv
 header = true
 
 [soln-plugin-writer]
