--- a/2d-euler-vortex/compressible-implicit-sdirk43.ini
+++ b/2d-euler-vortex/compressible-implicit-sdirk43.ini
@@ -12,13 +12,20 @@ system = euler
 order = 3
 
 [solver-time-integrator]
-scheme = rk34
-controller = pi
+formulation = dual
+
+scheme = sdirk43
+controller = none
 tstart = 0.0
-tend = 0.001
-dt = 0.001
-atol = 1e-6
-rtol = 1e-6
+tend = 0.01
+dt = 0.0005
+
+pseudo-scheme = rk4
+pseudo-controller = none
+pseudo-dt = 0.00025
+pseudo-niters-min = 1
+pseudo-niters-max = 5
+pseudo-resid-tol = 1e-7
 
 [solver-interfaces]
 riemann-solver = rusanov
@@ -34,16 +41,21 @@ nsteps = 1
 
 [soln-plugin-residual]
 nsteps = 1
-file = compressible-explicit-res.csv
+file = sdirk43-res.csv
 header = true
 
 [soln-plugin-integrate]
 nsteps = 1 
-file = compressible-explicit-int.csv
+file = sdirk43-int.csv
 header = true
 quad-deg = 9
 
 int-E = rho*(u*u + v*v)
+
+[soln-plugin-pseudostats]
+flushsteps = 1
+file = sdirk43-pseudostats.csv
+header = true
 
 [soln-plugin-writer]
 dt-out = 1.0
