--- a/2d-inc-cylinder/scheme_sdirk33.ini
+++ b/2d-inc-cylinder/scheme_sdirk33.ini
@@ -14,16 +14,16 @@ order  = 3
 
 [solver-time-integrator]
 formulation       = dual
-scheme            = esdirk23
+scheme            = sdirk33
 pseudo-scheme     = rk4
-controller        = pi
+controller        = none
 pseudo-controller = none
 tstart            = 0.0
 tend              = 100
 dt                = 0.005
 pseudo-dt         = 0.0001
 pseudo-niters-min = 1
-pseudo-niters-max = 100
+pseudo-niters-max = 5
 pseudo-resid-norm = l2
 pseudo-resid-tol  = 5e-3
 pseudo-resid-tol-p= 1e-2
@@ -43,9 +43,16 @@ soln-pts = williams-shunn
 soln-pts = gauss-legendre
 
 [soln-plugin-pseudostats]
-flushsteps = 20
-file = residual_variable-dt1.csv
+flushsteps = 1
+file = res_sdirk33.csv
 header = true
+
+[soln-plugin-integrate]
+nsteps = 1 
+file = int_sdirk33.csv
+header = true
+quad-deg = 9
+int-E = u*u + v*v
 
 [soln-bcs-wall]
 type = no-slp-wall
@@ -68,7 +75,3 @@ v = Vin
 u = Uin
 v = Vin
 p = Pc
-
-[soln-plugin-dtstats]
-file = dtstats-dt1.csv
-header = true
