--- a/2d-inc-cylinder/scheme_sdirk43.ini
+++ b/2d-inc-cylinder/scheme_sdirk43.ini
@@ -14,25 +14,19 @@ order  = 3
 
 [solver-time-integrator]
 formulation       = dual
-scheme            = sdirk33
-pseudo-scheme     = rk45
+scheme            = sdirk43
+pseudo-scheme     = rk4
 controller        = none
-pseudo-controller = local-pi
-tstart            = 75.0
-tend              = 76.0
-dt                = 0.1
-pseudo-dt         = 0.005
+pseudo-controller = none
+tstart            = 0.0
+tend              = 100
+dt                = 0.005
+pseudo-dt         = 0.0001
 pseudo-niters-min = 1
-pseudo-niters-max = 50
+pseudo-niters-max = 5
 pseudo-resid-norm = l2
 pseudo-resid-tol  = 5e-3
 pseudo-resid-tol-p= 1e-2
-
-atol = 1e-6
-pseudo-dt-max-mult = 2
-pseudo-dt-min-mult = 0.1
-
-dt-switch = 2
 
 [solver-interfaces]
 riemann-solver = rusanov
@@ -49,9 +43,16 @@ soln-pts = williams-shunn
 soln-pts = gauss-legendre
 
 [soln-plugin-pseudostats]
-flushsteps = 20
-file = res_vdt.csv
+flushsteps = 1
+file = res_sdirk43.csv
 header = true
+
+[soln-plugin-integrate]
+nsteps = 1 
+file = int_sdirk43.csv
+header = true
+quad-deg = 9
+int-E = u*u + v*v
 
 [soln-bcs-wall]
 type = no-slp-wall
@@ -74,8 +75,3 @@ v = Vin
 u = Uin
 v = Vin
 p = Pc
-
-[soln-plugin-pseudodt]
-flushsteps = 1
-file = dtau_vdt.csv
-header = true
