Comparison between none/pi

--- a/2d-inc-cylinder/scheme_esdirk23_none.ini
+++ b/2d-inc-cylinder/scheme_esdirk23_none.ini
@@ -19,7 +19,7 @@ pseudo-scheme     = rk4
 controller        = none
 pseudo-controller = none
 tstart            = 0.0
-tend              = 100
+tend              = 76
 dt                = 0.005
 pseudo-dt         = 0.0001
 pseudo-niters-min = 1
@@ -44,12 +44,12 @@ soln-pts = gauss-legendre
 
 [soln-plugin-pseudostats]
 flushsteps = 1
-file = res_esdirk23.csv
+file = res_esdirk23_none.csv
 header = true
 
 [soln-plugin-integrate]
 nsteps = 1 
-file = int_esdirk23.csv
+file = int_esdirk23_none.csv
 header = true
 quad-deg = 9
 int-E = u*u + v*v
