--- a/2d-inc-cylinder/scheme_esdirk23_pi.ini
+++ b/2d-inc-cylinder/scheme_esdirk23_pi.ini
@@ -14,9 +14,9 @@ order  = 3
 
 [solver-time-integrator]
 formulation       = dual
-scheme            = esdirk35
+scheme            = esdirk23
 pseudo-scheme     = rk4
-controller        = none
+controller        = pi
 pseudo-controller = none
 tstart            = 0.0
 tend              = 100
@@ -44,12 +44,12 @@ soln-pts = gauss-legendre
 
 [soln-plugin-pseudostats]
 flushsteps = 1
-file = res_esdirk35.csv
+file = res_esdirk23_pi.csv
 header = true
 
 [soln-plugin-integrate]
 nsteps = 1 
-file = int_esdirk35.csv
+file = int_esdirk23_pi.csv
 header = true
 quad-deg = 9
 int-E = u*u + v*v
