--- a/2d-inc-cylinder/scheme_esdirk35_none.ini
+++ b/2d-inc-cylinder/scheme_esdirk35_none.ini
@@ -14,7 +14,7 @@ order  = 3
 
 [solver-time-integrator]
 formulation       = dual
-scheme            = sdirk33
+scheme            = esdirk35
 pseudo-scheme     = rk4
 controller        = none
 pseudo-controller = none
@@ -44,12 +44,12 @@ soln-pts = gauss-legendre
 
 [soln-plugin-pseudostats]
 flushsteps = 1
-file = res_sdirk33.csv
+file = res_esdirk35_none.csv
 header = true
 
 [soln-plugin-integrate]
 nsteps = 1 
-file = int_sdirk33.csv
+file = int_esdirk35_none.csv
 header = true
 quad-deg = 9
 int-E = u*u + v*v
