--- a/2d-inc-cylinder/scheme_esdirk35_pi.ini
+++ b/2d-inc-cylinder/scheme_esdirk35_pi.ini
@@ -14,16 +14,16 @@ order  = 3
 
 [solver-time-integrator]
 formulation       = dual
-scheme            = sdirk43
+scheme            = esdirk35
 pseudo-scheme     = rk4
 controller        = none
 pseudo-controller = none
 tstart            = 0.0
-tend              = 100
-dt                = 0.005
+tend              = 75.01
+dt                = 0.0005
 pseudo-dt         = 0.0001
 pseudo-niters-min = 1
-pseudo-niters-max = 5
+pseudo-niters-max = 100
 pseudo-resid-norm = l2
 pseudo-resid-tol  = 5e-3
 pseudo-resid-tol-p= 1e-2
@@ -44,12 +44,12 @@ soln-pts = gauss-legendre
 
 [soln-plugin-pseudostats]
 flushsteps = 1
-file = res_sdirk43.csv
+file = res_esdirk35_pi.csv
 header = true
 
 [soln-plugin-integrate]
 nsteps = 1 
-file = int_sdirk43.csv
+file = int_esdirk35_pi.csv
 header = true
 quad-deg = 9
 int-E = u*u + v*v
