--- a/2d-inc-cylinder/scheme_sdirk33_none_pi.ini
+++ b/2d-inc-cylinder/scheme_sdirk33_none_pi.ini
@@ -6,27 +6,33 @@ nu      = 0.005
 Uin     = 1.0
 Vin     = 0.0
 Pc      = 1.0
-ac-zeta = 2.5
+ac-zeta = 9
 
 [solver]
 system = ac-navier-stokes
 order  = 3
 
 [solver-time-integrator]
-formulation       = dual
-scheme            = sdirk33
-pseudo-scheme     = rk4
-controller        = none
-pseudo-controller = none
-tstart            = 0.0
-tend              = 75.01
-dt                = 0.0005
-pseudo-dt         = 0.0001
-pseudo-niters-min = 1
-pseudo-niters-max = 100
-pseudo-resid-norm = l2
-pseudo-resid-tol  = 5e-3
-pseudo-resid-tol-p= 1e-2
+formulation        = dual
+scheme             = sdirk33
+pseudo-scheme      = rk45
+controller         = none
+pseudo-controller  = local-pi
+tstart             = 0.0
+tend               = 100
+dt                 =  0.5
+pseudo-dt          =  0.002
+pseudo-niters-min  = 1
+pseudo-niters-max  = 100
+pseudo-resid-norm  = l2
+pseudo-resid-tol   = 1e-3
+pseudo-resid-tol-p = 1e-2
+atol               = 1e-6
+rtol               = 1e-6
+
+[solver-dual-time-integrator-multip]
+pseudo-dt-fact = 1.75
+cycle = [(3, 1), (2, 1), (1, 1), (0, 2), (1, 1), (2, 1), (3, 4)]
 
 [solver-interfaces]
 riemann-solver = rusanov
@@ -44,12 +50,12 @@ soln-pts = gauss-legendre
 
 [soln-plugin-pseudostats]
 flushsteps = 1
-file = res_sdirk33.csv
+file = res_sdirk33_none_pi.csv
 header = true
 
 [soln-plugin-integrate]
 nsteps = 1 
-file = int_sdirk33.csv
+file = int_sdirk33_none_pi.csv
 header = true
 quad-deg = 9
 int-E = u*u + v*v
