--- a/2d-couette-flow/couette-flow.ini
+++ b/2d-couette-flow/couette-flow.ini
@@ -19,8 +19,8 @@ order = 2
 scheme = rk4
 controller = none
 tstart = 0.0
-tend = 4
-dt = 0.00004
+tend = 0.0001
+dt   = 0.00005
 
 [solver-interfaces]
 riemann-solver = rusanov
@@ -36,14 +36,6 @@ soln-pts = williams-shunn
 [solver-elements-quad]
 soln-pts = gauss-legendre
 
-[soln-plugin-nancheck]
-nsteps = 50
-
-[soln-plugin-writer]
-dt-out = 0.1
-basedir = .
-basename = couette-flow-{n:03d}
-
 [soln-bcs-bcwallupper]
 type = no-slp-isot-wall
 cpTw = cp*Tw
@@ -58,3 +50,6 @@ rho = 4*(Pc*sqrt(Pr*(Pr*Uw*Uw+8*cp*Tw))*log((sqrt(Pr*(Pr*Uw*Uw+8*cp*Tw))+Pr*Uw)/
 u = Uw
 v = 0.0
 p = Pc
+
+[local-optimiser-printcost]
+file = print-cost.csv
