--- a/2d-inc-cyl-optimiser/inc-cylinder.ini
+++ b/2d-inc-cyl-optimiser/inc-cylinder.ini
@@ -6,32 +6,32 @@ nu = 0.005
 Uin = 1.0
 Vin = 0.0
 Pc = 1.0
-ac-zeta = 2.5
 
 [solver]
 system = ac-navier-stokes
-order = 3
+ac-zeta = 2.5
+order = 0
 
 [solver-time-integrator]
 formulation = dual
-scheme = sdirk33
-pseudo-scheme = rk45
+scheme = backward-euler
+pseudo-scheme = rk34
 controller = none
-pseudo-controller = local-pi
+pseudo-controller = none
 tstart = 0.0
-tend = 1
+tend = 0.05
 dt = 0.05
 pseudo-dt = 0.005
-pseudo-niters-min = 100
-pseudo-niters-max = 100
+pseudo-niters-min = 1
+pseudo-niters-max = 1
 pseudo-resid-norm = l2
-pseudo-resid-tol = 1e-12
-atol = 1e-10
-pseudo-dt-max-mult = 1000
+
+pseudo-resid-tol   = 0.0001
+pseudo-resid-tol-p = 0.01
 
 [solver-dual-time-integrator-multip]
 pseudo-dt-fact = 1.75
-cycle = [(3, 1), (2, 0.1), (1, 0.1), (0, 1), (1, 1), (2, 1), (3, 1)]
+cycle = [(0, 1)]
 
 [solver-interfaces]
 riemann-solver = rusanov
@@ -82,8 +82,18 @@ u = Uin
 v = Vin
 p = Pc
 
-[global-optimiser-botorch]
-cost = runtime
-parameter = pmultigrid-0 pmultigrid-1 pmultigrid-2 pmultigrid-3 pmultigrid-4 pmultigrid-5 pmultigrid-6
-acqf-list = [('kg', 10), ('ei', 10)]
-bounds = [(1.0, 10.0), (0.0, 10.0), (0.0, 10.0), (0.0, 10.0), (0.0, 10.0), (0.0, 10.0), (0.0, 10.0)]
+[soln-plugin-integrate]
+nsteps = 1
+file = int.csv
+quad-deg = 4
+int-absolute-divergence = abs(grad_u_x + grad_v_y)
+
+[local-optimiser-zeta]
+cost = integral-absolute-divergence
+parameter = ac-zeta
+
+;[global-optimiser-botorch]
+;cost = runtime
+;parameter = pmultigrid-0 pmultigrid-1 pmultigrid-2 pmultigrid-3 pmultigrid-4 pmultigrid-5 pmultigrid-6
+;acqf-list = [('kg', 10), ('ei', 10)]
+;bounds = [(1.0, 10.0), (0.0, 10.0), (0.0, 10.0), (0.0, 10.0), (0.0, 10.0), (0.0, 10.0), (0.0, 10.0)]
