--- a/2d-inc-cylinder/yes-PI_yes-PMG.ini
+++ b/2d-inc-cylinder/yes-PI_yes-PMG.ini
@@ -79,7 +79,7 @@ u = Uin
 v = Vin
 p = Pc
 
-[soln-plugin-pseudodt]
-flushsteps = 1
-file = dtau_vdt.csv
-header = true
+;[soln-plugin-pseudodt]
+;flushsteps = 1
+;file = dtau_vdt.csv
+;header = true
