Set up oberver/moeller/optimiser

--- a/2d-inc-cyl-optimiser/inc-cylinder.ini
+++ b/2d-inc-cyl-optimiser/inc-cylinder.ini
@@ -19,11 +19,11 @@ pseudo-scheme = rk34
 controller = none
 pseudo-controller = none
 tstart = 0.0
-tend = 0.05
+tend = 0.1
 dt = 0.05
 pseudo-dt = 0.005
 pseudo-niters-min = 1
-pseudo-niters-max = 1
+pseudo-niters-max = 2
 pseudo-resid-norm = l2
 
 pseudo-resid-tol   = 0.0001
@@ -31,7 +31,7 @@ pseudo-resid-tol-p = 0.01
 
 [solver-dual-time-integrator-multip]
 pseudo-dt-fact = 1.75
-cycle = [(0, 1)]
+cycle = [(0, 1),]
 
 [solver-interfaces]
 riemann-solver = rusanov
@@ -46,14 +46,6 @@ soln-pts = williams-shunn
 
 [solver-elements-quad]
 soln-pts = gauss-legendre
-
-[soln-plugin-nancheck]
-nsteps = 50
-
-[soln-plugin-pseudostats]
-flushsteps = 20
-file = residual.csv
-header = true
 
 [soln-plugin-writer]
 dt-out = 5.0
@@ -82,18 +74,22 @@ u = Uin
 v = Vin
 p = Pc
 
-[soln-plugin-integrate]
-nsteps = 1
-file = int.csv
-quad-deg = 4
-int-absolute-divergence = abs(grad_u_x + grad_v_y)
+[soln-plugin-pseudostats]
+flushsteps = 1
+file = pseudotstats.csv
+header = true
 
-[local-optimiser-zeta]
-cost = integral-absolute-divergence
-parameter = ac-zeta
+[parameter-observer-zeta]
+bounds = [(1.0, 10.0),]
+optimise-all-stages = True
+optimise-all-levels = True
+optimise-all-pseudoiters = True
 
-;[global-optimiser-botorch]
-;cost = runtime
-;parameter = pmultigrid-0 pmultigrid-1 pmultigrid-2 pmultigrid-3 pmultigrid-4 pmultigrid-5 pmultigrid-6
-;acqf-list = [('kg', 10), ('ei', 10)]
-;bounds = [(1.0, 10.0), (0.0, 10.0), (0.0, 10.0), (0.0, 10.0), (0.0, 10.0), (0.0, 10.0), (0.0, 10.0)]
+[cost-observer-sst_residual_norm-p]
+observe-all-stages = True
+observe-all-levels = True
+observe-all-pseudoiters = True
+
+[local-modeller-binarymodeller]
+
+[local-optimiser-binarystepper]
