set cfg to make localPI work for al levels.

--- a/2d-inc-cylinder/scheme_sdirk33_none_pi.ini
+++ b/2d-inc-cylinder/scheme_sdirk33_none_pi.ini
@@ -19,7 +19,7 @@ pseudo-scheme      = rk45
 controller         = none
 pseudo-controller  = local-pi
 tstart             = 0.0
-tend               = 100
+tend               = 76
 dt                 =  0.5
 pseudo-dt          =  0.002
 pseudo-niters-min  = 1
@@ -27,8 +27,13 @@ pseudo-niters-max  = 100
 pseudo-resid-norm  = l2
 pseudo-resid-tol   = 1e-3
 pseudo-resid-tol-p = 1e-2
-atol               = 1e-6
-rtol               = 1e-6
+atol               = 1e-6 ; 10
+
+pseudo-dt-max-mult = 10000
+pseudo-dt-min-mult = 0.001
+
+max-fact           = 1.01
+min-fact           = 0.98
 
 [solver-dual-time-integrator-multip]
 pseudo-dt-fact = 1.75
@@ -52,13 +57,6 @@ soln-pts = gauss-legendre
 flushsteps = 1
 file = res_sdirk33_none_pi.csv
 header = true
-
-[soln-plugin-integrate]
-nsteps = 1 
-file = int_sdirk33_none_pi.csv
-header = true
-quad-deg = 9
-int-E = u*u + v*v
 
 [soln-bcs-wall]
 type = no-slp-wall
