--- a/2d-inc-cylinder/scheme_sdirk33_none_pi_viewng_regs.ini
+++ b/2d-inc-cylinder/scheme_sdirk33_none_pi_viewng_regs.ini
@@ -25,7 +25,7 @@ pseudo-dt          = 0.001
 pseudo-dt-min-mult = 0.001
 pseudo-dt-max-mult = 100000
 pseudo-niters-min  = 1
-pseudo-niters-max  = 2000
+pseudo-niters-max  = 1
 pseudo-resid-norm  = l2
 pseudo-resid-tol   = 1e-4
 pseudo-resid-tol-p = 1e-3
@@ -35,7 +35,7 @@ min-fact = 0.9
 
 [solver-dual-time-integrator-multip]
 pseudo-dt-fact = 1.75
-cycle = [(3, 1), (2, 1), (1, 1), (0, 2), (1, 1), (2, 1), (3, 1)]
+cycle = [(3,1)] ; [(3, 0), (2, 0), (1, 0), (0, 1), (1, 1), (2, 1), (3, 1)]
 
 [solver-interfaces]
 riemann-solver = rusanov
@@ -53,20 +53,20 @@ soln-pts = gauss-legendre
 
 [soln-plugin-pseudostats]
 flushsteps = 1
-file = view_registers.csv
+file = register-writer/view_registers.csv
 header = true
 
-; [pseudo-plugin-registerwriter-3]
-; basedir = .
-; basename = reg-3
-; post-action = pyfr export {mesh} {soln} reg-3.vtu
-; times = [(77, 1, 1)]
-; 
-; [pseudo-plugin-pseudodtwriter]
-; basedir = .
-; basename = reg-3
-; post-action = pyfr export {mesh} {soln} reg-3.vtu
-; times = [(77, 1, 1)]
+[pseudo-plugin-registerwriter-3]        ; multi-p level number 3
+basedir = /home/sambit/github/Improvements/PyFR-Test-Cases/2d-inc-cylinder/register-writer/
+basename = res-reg-3
+post-action = pyfr export {mesh} {soln} res-reg-3.vtu
+times = [(77, 1, 1)]    ; corresponds to tcurr =  77, stage number = 1+1 and pseudo-iteration number 1+1
+ 
+[pseudo-plugin-pseudodtwriter]
+basedir = /home/sambit/github/Improvements/PyFR-Test-Cases/2d-inc-cylinder/register-writer/
+basename = psdt-reg-3
+post-action = pyfr export {mesh} {soln} psdt-reg-3.vtu
+times = [(77, 1, 1)]    ; corresponds to tcurr =  77, stage number = 1+1 and pseudo-iteration number 1+1
 
 [soln-bcs-wall]
 type = no-slp-wall
