--- a/2d-inc-cylinder/inc-cylinder.ini
+++ b/2d-inc-cylinder/inc-cylinder.ini
@@ -22,12 +22,13 @@ tstart = 0.0
 tend = 75.0
 dt = 0.05
 pseudo-dt = 0.005
-pseudo-niters-min = 3
-pseudo-niters-max = 3
+pseudo-niters-min = 1
+pseudo-niters-max = 100
 pseudo-resid-norm = l2
-pseudo-resid-tol = 1e-12
-atol = 1e-6
-pseudo-dt-max-mult = 2.5
+pseudo-resid-tol = 1e-4
+atol = 1e-10
+pseudo-dt-max-mult = 10000
+pseudo-dt-min-mult = 0.001
 
 [solver-dual-time-integrator-multip]
 pseudo-dt-fact = 1.75
@@ -47,16 +48,13 @@ soln-pts = williams-shunn
 [solver-elements-quad]
 soln-pts = gauss-legendre
 
-[soln-plugin-nancheck]
-nsteps = 50
-
 [soln-plugin-pseudostats]
-flushsteps = 20
+flushsteps = 1
 file = residual.csv
 header = true
 
 [soln-plugin-writer]
-dt-out = 5.0
+dt-out = 25.0
 basedir = .
 basename = inc-cylinder-{t:.2f}
 
